# Report-Tool

./: .gitignore  Pipfile  README.md  changelog.txt  classCustomGraphicsItems.py  classCustomHandler.py  classCustomWidgets.py  classDialogBox.py  classEquityChart.py  classExport.py  classLsEvent.py  classMainWindow.py  classRestCom.py  classResults.py  classThread.py  credentials.json  funcMisc.py  ig_config.json  igls.py  logging.ini  main.py  pyproject.toml  setup.py
report_tool/: __init__.py  __main__.py
report_tool/calculate/: trades.py
report_tool/communications/: ig_lightstreamer.py  ig_rest_api.py
report_tool/exports/: excel.py  formats.py
report_tool/logger/: handlers.py
report_tool/qt/: dialog_box.py  equity_chart.py  functions.py  graphics_items.py  ls_event.py  main_window.py  thread.py  widgets.py
report_tool/utils/: constants.py  fs_utils.py  json_utils.py  settings.py
src/calculate/: trades.py
src/communications/: ig_rest_api.py  igls.py
src/exports/: excel.py
src/gui/: classCustomWidgets.py  classMainWindow.py  dialog_box.py  main_window.py  thread.py  widgets.py
src/logging/: classCustomHandler.py
src/qt/: dialog_box.py  equity_chart.py  main_window.py  thread.py  widgets.py
