[tool.poetry]
name = "report-tool"
version = "3.0.0"
description = "Report Tool is an application that uses IG Rest API to show basic statistics about past trades."
authors = ["Samuel Giffard <samuel@giffard.co>", "Tioneb Nadous"]
license = "MIT"
readme = "README.md"
packages = [{include = "report_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
PyQt5 = "^5.15.7"
pyqtgraph = "^0.13.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
cx-Freeze = "^6.13.1"
PyQt5-stubs = "^5.15.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
