[tool.poetry]
name = "report-tool"
version = "3.0.0-alpha2"
description = "Report Tool is an application that uses IG Rest API to show basic statistics about past trades."
authors = ["Samuel Giffard <samuel@giffard.co>", "Tioneb Nadous <benoit.soudan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "report_tool" },
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
PyQt5 = "^5.15.9"
pyqtgraph = "^0.13.2"
requests = "^2.28.2"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
cx-Freeze = "^6.14.7"
PyQt5-stubs = "^5.15.6.0"
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
report-tool = 'report_tool.__main__:main'
